# rpcsx-ui

./: .gitignore  README.md  RpcsxUI.sln  app.config.ts  build.mjs  bun.lockb  cleanup-svelte.sh  crowdin.yml  eslint.config.js  forge.config.cjs  forge.config.js  metro.config.cjs  package-lock.json  package.json  postcss.config.cjs  svelte.config.js  tailwind.config.cjs  tsconfig.json  vite.config.js
.github/: dependabot.yml
.github/workflows/: android.yml  build.yml  crowdin.yml  tauri.yml
RpcsxUI/: App.axaml  App.axaml.cs  RpcsxUI.csproj
RpcsxUI.Android/: MainActivity.cs  RpcsxUI.Android.csproj
RpcsxUI.Browser/: Program.cs  RpcsxUI.Browser.csproj
RpcsxUI.Browser/Properties/: launchSettings.json
RpcsxUI.Browser/wwwroot/: index.html
RpcsxUI.Core/Models/: GameCoreModel.cs
RpcsxUI.Core/Providers/: IGamesProvider.cs  IProvidersBase.cs
RpcsxUI.Core/Services/: GamesService.cs
RpcsxUI.Core/Services/Abstractions/: IGamesService.cs  IServicesBase.cs
RpcsxUI.Desktop/: Program.cs  RpcsxUI.Desktop.csproj  app.manifest
RpcsxUI.Desktop/Properties/: launchSettings.json
RpcsxUI.Infrastructure/: RpcsxUI.Infrastructure.csproj
RpcsxUI.Infrastructure/Providers/: GamesProvider.cs
RpcsxUI.iOS/: AppDelegate.cs  Info.plist  Main.cs  RpcsxUI.iOS.csproj
RpcsxUI/Abstractions/: ISupportsInitialized.cs
RpcsxUI/Auxiliary/: AppViewLocator.cs  ConfigurationExtensions.cs  ModelExtensions.cs
RpcsxUI/Converters/: GamesCountToStringConverter.cs
RpcsxUI/Models/: GameModel.cs
RpcsxUI/States/: ApplicationState.cs
RpcsxUI/ViewModels/: GamesViewModel.cs  LogsViewModel.cs  MainViewModel.cs  SettingsViewModel.cs  ViewModelBase.cs
RpcsxUI/Views/: GamesView.axaml  GamesView.axaml.cs  LogsView.axaml  LogsView.axaml.cs  MainView.axaml  MainView.axaml.cs  MainWindow.axaml  MainWindow.axaml.cs  SettingsView.axaml  SettingsView.axaml.cs  UserControlBase.cs
android/: gradle.properties  settings.gradle
android/app/: build.gradle
electron/: forge.config.js  package-lock.json  package.json
extensions/cpp/: CMakeLists.txt
extensions/cpp/explorer/: CMakeLists.txt  extension.json
extensions/cpp/rpcsx-ui-cpp/: CMakeLists.txt
extensions/cpp/rpcsx-ui-cpp/include/rpcsx/ui/: Protocol.hpp  Transport.hpp  extension.hpp  file.hpp  format.hpp  json.hpp  log.hpp  refl.hpp
extensions/cpp/rpcsx-ui-cpp/src/: extension.cpp  file.cpp
modules/extension-loader/: expo-module.config.json
modules/extension-loader/android/: build.gradle
modules/extension-loader/ios/: ExtensionLoader.podspec  ExtensionLoaderModule.swift
rpcsx-ui/: package.json  postcss.config.cjs  svelte.config.js  tailwind.config.cjs  tsconfig.json  vite.config.ts
rpcsx-ui-kit/: build.mjs  package.json  tsconfig.json
rpcsx-ui-kit/src/: FileDatabase.ts  cli.ts  cpp-generators.ts  generators.ts  main.ts  path.ts
rpcsx-ui/src/: i18n.ts
rpcsx-ui/src/app/: component.json
rpcsx-ui/src/core/: component.json
rpcsx-ui/src/core/lib/: Json.ts  (+21 more)
rpcsx-ui/src/explorer/: component.json
rpcsx-ui/src/extension-host/: component.json
src/: app.html  app.postcss  global.d.ts  i18n.ts  stores.ts
src-electron/: tsconfig.json  tsconfig.preload.json
src-electron/src/: api.ts  locations.ts  main.ts  preload.ts  settings.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/components/: Footer.svelte  GameGridItem.svelte  GameLibrary.svelte  GameListItem.svelte  Header.svelte
src/helpers/: FileHelper.ts  window.ts
src/locales/: en.json
src/models/: Game.ts
src/routes/: +layout.svelte  +layout.ts  +page.svelte
(+129 files in other folders)
